gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/failCopyCtor2.d
version https://git-lfs.github.com/spec/v1
oid sha256:279fff8d4d729c96c5e04cc3f9db1654e95cfd30f076b3e063042d843e1f4dc6
size 431
